[gd_scene format=3 uid="uid://dryi2lffa523i"]

[ext_resource type="Script" uid="uid://bu1ywck4kx5ny" path="res://scenes/OptionsMenu.gd" id="1_options"]
[ext_resource type="Texture2D" uid="uid://c8l7m1x4p6k2j" path="res://assets/ui/slider_grabber_30.tres" id="2_grabber"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_track"]
content_margin_left = 4.0
content_margin_top = 10.0
content_margin_right = 4.0
content_margin_bottom = 10.0
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_area"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.2, 0.5, 1, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_area_highlight"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.3, 0.6, 1, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10

[node name="OptionsMenu" type="Control" unique_id=1396723102]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_options")

[node name="Background" type="TextureRect" parent="." unique_id=370514989]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=596072179]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=546317079]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1315470960]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/Header" unique_id=1830793467]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "←"

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/Header" unique_id=765244509]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1175700195]
layout_mode = 2

[node name="LanguageSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=781572249]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="LanguageLabel" type="Label" parent="MarginContainer/VBoxContainer/LanguageSection" unique_id=1224506948]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Langue / Language"
horizontal_alignment = 1

[node name="LanguageDropdown" type="OptionButton" parent="MarginContainer/VBoxContainer/LanguageSection" unique_id=1835564060]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
selected = 0
item_count = 2
popup/item_0/text = "Français"
popup/item_0/id = 0
popup/item_1/text = "English"
popup/item_1/id = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=-414234397]
layout_mode = 2

[node name="SoundSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=981572249]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SoundLabel" type="Label" parent="MarginContainer/VBoxContainer/SoundSection" unique_id=634572356]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Son / Audio"
horizontal_alignment = 1

[node name="MusicBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SoundSection" unique_id=1831499812]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SoundSection/MusicBox" unique_id=432514065]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Musique"
horizontal_alignment = 2

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SoundSection/MusicBox" unique_id=1235564060]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("2_grabber")
theme_override_icons/grabber_highlight = ExtResource("2_grabber")
theme_override_styles/slider = SubResource("StyleBoxFlat_track")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_area")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_area_highlight")
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SoundSection" unique_id=1015196319]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SoundSection/SFXBox" unique_id=87283221]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "SFX"
horizontal_alignment = 2

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SoundSection/SFXBox" unique_id=-1949403236]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("2_grabber")
theme_override_icons/grabber_highlight = ExtResource("2_grabber")
theme_override_styles/slider = SubResource("StyleBoxFlat_track")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_area")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_area_highlight")
max_value = 1.0
step = 0.05
value = 1.0

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer" unique_id=1608799950]
layout_mode = 2
size_flags_vertical = 3
